upgraded to material 0.4.2, upgraded to angular 1.3

--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -7,11 +7,11 @@
             </div>
         </md-toolbar>
         <section layout="horizontal" layout-align="center center" class="panel-body panel-operator-controls">
-            <md-button class="md-button-raised md-button-colored">Inhibit All</md-button>
-            <md-button class="md-button-raised md-button-colored">Stow All</md-button>
-            <md-button class="md-button-raised md-button-colored">Stop All</md-button>
-            <md-button class="md-button-raised md-button-colored">Resume Operations</md-button>
-            <md-button class="md-button-raised md-button-colored">Shutdown Computing</md-button>
+            <md-button aria-label="Inhibit All" class="md-button-raised md-button-colored">Inhibit All</md-button>
+            <md-button aria-label="Stow All" class="md-button-raised md-button-colored">Stow All</md-button>
+            <md-button aria-label="Stop All" class="md-button-raised md-button-colored">Stop All</md-button>
+            <md-button aria-label="Resume Operations" class="md-button-raised md-button-colored">Resume Operations</md-button>
+            <md-button aria-label="Shutdown Computing" class="md-button-raised md-button-colored">Shutdown Computing</md-button>
         </section>
 
         <md-list class="receptor-state-list">
