--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -1,17 +1,17 @@
 <section layout-align="center center" class="navigation-buttons">
 
-    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('operatorControl')">Operator Control</md-button>
-    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('alarms')">Alarms</md-button>
-    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('health')">Health and State</md-button>
+    <md-button aria-label="Operator Control" class="md-button-raised md-button-colored" ng-click="stateGo('operatorControl')">Operator Control</md-button>
+    <md-button aria-label="Alarms" class="md-button-raised md-button-colored" ng-click="stateGo('alarms')">Alarms</md-button>
+    <md-button aria-label="Health and State" class="md-button-raised md-button-colored" ng-click="stateGo('health')">Health and State</md-button>
 
 
-    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('scheduler')">Scheduler</md-button>
-    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('weather')">Weather</md-button>
-    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('sensorGraph')">Sensor Graphs</md-button>
+    <md-button aria-label="Scheduler" class="md-button-raised md-button-colored" ng-click="stateGo('scheduler')">Scheduler</md-button>
+    <md-button aria-label="Weather" class="md-button-raised md-button-colored" ng-click="stateGo('weather')">Weather</md-button>
+    <md-button aria-label="Sensor Graphs" class="md-button-raised md-button-colored" ng-click="stateGo('sensorGraph')">Sensor Graphs</md-button>
 
-    <md-button class="md-button-raised md-button-colored" ng-click="stateGo('admin')">Admin</md-button>
-    <md-button class="md-button-raised md-button-colored" disabled>Log Reports</md-button>
-    <md-button class="md-button-raised md-button-colored" disabled>Source Catalogues</md-button>
+    <md-button aria-label="Admin" class="md-button-raised md-button-colored" ng-click="stateGo('admin')">Admin</md-button>
+    <md-button aria-label="Log Reports" class="md-button-raised md-button-colored" disabled>Log Reports</md-button>
+    <md-button aria-label="Source Catalogues" class="md-button-raised md-button-colored" disabled>Source Catalogues</md-button>
 
 
     <!--<button class="md-button-colored"></button>-->
