--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -7,11 +7,11 @@
             </div>
         </md-toolbar>
         <section layout="horizontal" layout-align="center center" class="panel-body alarms-buttons">
-            <md-button class="md-button-raised md-button-colored">Known</md-button>
-            <md-button class="md-button-raised md-button-colored">Acknowledge</md-button>
-            <md-button class="md-button-raised md-button-colored">Clear</md-button>
-            <md-button class="md-button-raised md-button-colored">Something</md-button>
-            <md-button class="md-button-raised md-button-colored">Another thing</md-button>
+            <md-button aria-label="Known" class="md-button-raised md-button-colored">Known</md-button>
+            <md-button aria-label="Acknowledge" class="md-button-raised md-button-colored">Acknowledge</md-button>
+            <md-button aria-label="Clear" class="md-button-raised md-button-colored">Clear</md-button>
+            <md-button aria-label="Something" class="md-button-raised md-button-colored">Something</md-button>
+            <md-button aria-label="Another Thing" class="md-button-raised md-button-colored">Another thing</md-button>
             <md-checkbox ng-model="showLargeAlarms" aria-label="Show Detailed Alarms">Show Detailed Alarms</md-checkbox>
         </section>
 
