--- a/app/login-form/login-form.html
+++ b/app/login-form/login-form.html
@@ -7,23 +7,18 @@
 
 
         </md-toolbar>
-        <form ng-submit="login(credentials)">
-            <md-content layout="vertical" layout-align="center center">
 
-                <md-input-group class="md-input-group-theme-light">
+        <md-content>
+            <form ng-submit="login(credentials)" layout="vertical" layout-align="center center">
 
-                    <label for="usernameInput">Username</label>
-                    <md-input id="usernameInput" type="text" ng-model="credentials.username"></md-input>
-                    <label for="passwordInput">Password</label>
-                    <md-input id="passwordInput" type="password" ng-model="credentials.password"></md-input>
+                <md-text-float class="long" label="Username" ng-model="credentials.username"></md-text-float>
+                <md-text-float class="long" label="Password" type="password" ng-model="credentials.password"></md-text-float>
 
-                </md-input-group>
-
-                <md-button type="submit" class="md-button-raised md-button-colored">Login
-                </md-button>
+                <md-button aria-label="Login" type="submit" class="md-button-raised md-button-colored">Login</md-button>
 
                 <a style="margin-top: 10px;" href="" ng-click="forgotPassword()">Forgot your password?</a>
-            </md-content>
-        </form>
+            </form>
+        </md-content>
+
     </div>
 </div>
