--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -4,10 +4,12 @@
         <md-toolbar class="panel-toolbar">
             <div class="md-toolbar-tools" layout="horizontal">
                <span>
-                    <md-checkbox class="md-checkbox-no-label" ng-model="selectAllAlarms" ng-click="toggleSelectAllAlarms(!selectAllAlarms)" aria-label="Select All Alarms"></md-checkbox>
+                    <md-checkbox ng-model="selectAllAlarms" ng-click="toggleSelectAllAlarms(!selectAllAlarms)" aria-label="Select All Alarms">
+                        <b>Current Alarms</b>
+                    </md-checkbox>
                     <md-tooltip>Select All Alarms</md-tooltip>
                 </span>
-                <span flex><b>Current Alarms</b></span>
+                <span flex></span>
                 <section layout="horizontal" layout-align="center center" class="alarms-buttons">
                     <md-button aria-label="Add as Known" class="md-button-raised md-button-colored">Add as Known</md-button>
                     <md-button aria-label="Acknowledge" class="md-button-raised md-button-colored">Acknowledge</md-button>
@@ -80,11 +82,14 @@
     <div class="md-whiteframe-z1" layout="vertical" style="margin-top: 16px;">
         <md-toolbar class="panel-toolbar">
             <div class="md-toolbar-tools" layout="horizontal">
-                <span>
-                    <md-checkbox class="md-checkbox-no-label" ng-model="selectAllKnownAlarms" aria-label="Select All Known Alarms" ng-click="toggleSelectAllKnownAlarms(!selectAllKnownAlarms)"></md-checkbox>
+
+               <span>
+                    <md-checkbox ng-model="selectAllKnownAlarms" ng-click="toggleSelectAllKnownAlarms(!selectAllKnownAlarms)" aria-label="Select All Known Alarms">
+                        <b>Known Alarms</b>
+                    </md-checkbox>
                     <md-tooltip>Select All Known Alarms</md-tooltip>
                 </span>
-                <span flex><b>Known Alarms</b></span>
+                <span flex></span>
                 <section layout="horizontal" layout-align="center center" class="alarms-buttons">
                     <md-button aria-label="Cancel Known" class="md-button-raised md-button-colored">Cancel Known</md-button>
                     <md-checkbox ng-model="showKnownNominalAlarms" aria-label="Show Nominal">Show Nominal</md-checkbox>
