fixed dynamic loading path of d3 when minified

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <button class="button-toolbar-flat-icon"
                         style="margin-left: 0px; padding: 0px;"
                         ng-click="showSideNav = !showSideNav">
-                    <i class="fa" ng-class="{'fa-angle-left': showSideNav, 'fa-angle-right': !showSideNav}"></i>
+                    <i class="fa fa-navicon"></i>
                 </button>
 
                 <div class="btn-group"
