added mockup control buttons for vds control

--- a/index.html
+++ b/index.html
@@ -125,18 +125,18 @@
                 <md-item>
                     <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('video') }" ng-click="stateGo('video')">Video</button>
                 </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('weather') }" ng-click="stateGo('weather')">Weather</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item">Log Reports</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item">Source Catalogues</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('admin') }" ng-click="stateGo('admin')">User Admin</button>
-                </md-item>
+                <!--<md-item>-->
+                    <!--<button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('weather') }" ng-click="stateGo('weather')">Weather</button>-->
+                <!--</md-item>-->
+                <!--<md-item>-->
+                    <!--<button ink-ripple class="menu-item">Log Reports</button>-->
+                <!--</md-item>-->
+                <!--<md-item>-->
+                    <!--<button ink-ripple class="menu-item">Source Catalogues</button>-->
+                <!--</md-item>-->
+                <!--<md-item>-->
+                    <!--<button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('admin') }" ng-click="stateGo('admin')">User Admin</button>-->
+                <!--</md-item>-->
                 <md-item>
                     <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('about') }" ng-click="stateGo('about')">About katGUI</button>
                 </md-item>
