--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -17,7 +17,7 @@
         <md-list class="receptor-state-list">
             <md-item ng-repeat="rec in receptorsData track by $id(rec.name)">
                 <md-item-content class="receptor-state-div" layout="vertical">
-                    <p style="margin-top: 4px;">{{rec.since}}</p>
+                    <p style="margin-top: 4px;">{{rec.since}}<md-tooltip>Time since last status change</md-tooltip></p>
                     <p style="font-size: 26px;"><b>{{rec.name}}</b></p>
                     <p class="flash-receptor-state receptor-{{rec.state}}"><i>{{rec.state}}</i></p>
                     <div ng-show="rec.inhibited" class="inhibited">
